added notebook to try coding

--- a/lecture2.html
+++ b/lecture2.html
@@ -226,6 +226,7 @@
         <div style="display:flex;align-items:center;gap:14px;flex-wrap:wrap">
           <a href="./index.html" class="tag" style="text-transform:none">← Course Home</a>
           <a href="./lecture1.html" class="tag" style="text-transform:none">← Lecture 1</a>
+          <a href="./assignments.html" class="tag" style="text-transform:none">Assignments</a>
           <a href="./syllabus.html" class="tag" style="text-transform:none">Syllabus</a>
         </div>
       </header>
@@ -296,6 +297,10 @@
         <div class="materials">
           <h3>References & Resources</h3>
           <p>Live demo tool: <a href="./eeg-demo.html">eeg-demo.html</a>. Analysis libraries: <a href="https://mne.tools/stable/auto_examples/">MNE‑Python examples</a>, <a href="https://sccn.ucsd.edu/eeglab/index.php">EEGLAB</a> (<a href="https://doi.org/10.1016/j.jneumeth.2003.10.009">Delorme & Makeig, 2004</a>), <a href="https://www.fieldtriptoolbox.org/">FieldTrip</a>, <a href="https://neuroimage.usc.edu/brainstorm/">Brainstorm</a>; acquisition SDKs: <a href="https://brainflow.readthedocs.io/en/stable/">BrainFlow</a>, <a href="https://github.com/sccn/labstreaminglayer">LabStreamingLayer</a>; standards/datasets: <a href="https://bids.neuroimaging.io/">BIDS</a> (<a href="https://doi.org/10.1038/s41597-019-0104-8">EEG‑BIDS</a>), <a href="https://openneuro.org/">OpenNeuro</a>, <a href="https://physionet.org/content/eegmmidb/1.0.0/">PhysioNet EEGMMI</a>, <a href="http://bnci-horizon-2020.eu/database/data-sets">BNCI Horizon SSVEP datasets</a>; signal processing: <a href="https://docs.scipy.org/doc/scipy/reference/signal.html">SciPy Signal</a> (<a href="https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.welch.html">Welch PSD</a>), <a href="https://github.com/indutny/fft.js">fft.js</a>; visualization: <a href="https://d3js.org/">D3</a>, <a href="https://plotly.com/javascript/">Plotly</a>, <a href="https://github.com/leeoniya/uPlot">uPlot</a>; BCI platforms: <a href="https://www.bci2000.org/">BCI2000</a>, <a href="http://openvibe.inria.fr/">OpenViBE</a>.</p>
+        </div>
+
+        <div class="demo-block">
+          <strong>📋 This Week's Assignment:</strong> <a href="./assignments.html#assignment-2" style="color: var(--accent-2);">Assignment 2: EEG Data Analysis Fundamentals</a> — Load the PhysioNet EEG dataset, apply filtering and preprocessing, then create power spectral density plots. Due September 20.
         </div>
 
       </main>
