update lecture 2 and assignment

--- a/lecture2.html
+++ b/lecture2.html
@@ -300,7 +300,7 @@
         </div>
 
         <div class="demo-block">
-          <strong>📋 This Week's Assignment:</strong> <a href="./assignments.html#assignment-2" style="color: var(--accent-2);">Assignment 2: EEG Data Analysis Fundamentals</a> — Load the PhysioNet EEG dataset, apply filtering and preprocessing, then create power spectral density plots. Due September 20.
+          <strong>📋 This Week's Assignment:</strong> <a href="./assignments.html" style="color: var(--accent-2);">Assignment 1: EEG Data Loading and Basic Filtering</a> — Load the OpenNeuro ds003061 EEG dataset (Visual Working Memory task), apply bandpass filtering (1-40 Hz), and create comparison plots of raw vs filtered data plus power spectral density analysis. Due September 22.
         </div>
 
       </main>
