--- a/portfolio_test/student_portfolios_index.html
+++ b/portfolio_test/student_portfolios_index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="cache-buster" content="20250108-v1">
     <title>PSYCH 403A1 - Student Portfolio Catalog</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Spectral:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -1142,6 +1146,14 @@
             }
         });
     
+    </script>
+    
+    <script>
+        // Cache busting script - v20250108
+        // Force reload if page is cached
+        if (window.performance && window.performance.navigation.type === 2) {
+            window.location.reload(true);
+        }
     </script>
 </body>
 </html>
